update time massage sent and fix chat box size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@ body{
   font-optical-sizing : auto; 
   font-weight: 600;
   font-style: 1;
-
-  overflow: hidden;
   animation: blur 0.5s ease-out;
 
 }
@@ -28,10 +26,9 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-
+  margin: 0;
   background-color: #024f8e;/*#467599;*/
   box-shadow: 0 0 30px -18px #4D99E7;
-  margin:auto;
 
 }
 #title_inner_container{
@@ -125,20 +122,20 @@ body{
   justify-content: center;
 
   float: left;
-  margin-top: 40px;
+  margin-top: 0px;
   /* Fade in container */
   animation: fadeIn 1s linear;
 
 }
 #chat_inner_container{
   margin: 50px;
-  width:auto;
+  width:100%;
   height: auto;
 }
 #chat_content_container{
   
   width: 100%;
-  height: 50%;
+  height: 80%;
 
   float: left;
   overflow-y: auto;
@@ -192,6 +189,7 @@ body{
 
   float: left;
   margin-top: 20px;
+  margin-bottom: 10px;
 }
 #chat_logout{
   text-decoration: none;
